// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render with multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    12
     
    expenses
     totalling 
    $ 254,535.56
  </h1>
</div>
`;

exports[`should correctly render with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $ 235.56
  </h1>
</div>
`;
